add important comments & the Managarmr to the snow biome

--- a/Game.ini
+++ b/Game.ini
@@ -1,16 +1,42 @@
+; ConfigAddNPCSpawnEntriesContainer is used to add new spawn entries
+; NPCSpawnEntriesContainerClassString is where you define the spawn region
+; AnEntryName is a name for the specific spawn entry, it doesn't affect gameplay
+; EntryWeight determines the spawn chance compared to other creatures in the area
+; NPCsToSpawnStrings is a list of creatures to spawn for this entry
+; NPCClassString specifies the creature for the limit
+; MaxPercentageOfDesiredNumToAllow is the max % of total creatures in the area that can be this creature
+; Remember to use a comma to separate multiple ConfigAddNPCSpawnEntriesContainer entries
+
 ConfigAddNPCSpawnEntriesContainer=(
     NPCSpawnEntriesContainerClassString="RedwoodsSpawner",
     NPCSpawnEntries=(
         (
             AnEntryName="PhoenixSpawner",
-            EntryWeight=0.1,  # Adjust this value to make the Phoenix more or less common. Lower values make it rarer.
+            EntryWeight=0.1,
             NPCsToSpawnStrings=("Phoenix_Character_BP_C")
         )
     ),
     NPCSpawnLimits=(
         (
             NPCClassString="Phoenix_Character_BP_C",
-            MaxPercentageOfDesiredNumToAllow=0.1  # Adjust this value to limit the number of Phoenixes that can spawn at one time. Lower values allow fewer Phoenixes.
+            MaxPercentageOfDesiredNumToAllow=0.1
+        )
+    )
+),
+
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnow_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="ManagarmrSpawns",
+            EntryWeight=0.1,
+            NPCsToSpawnStrings=("IceJumper_Character_BP_Summoned_C")
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="IceJumper_Character_BP_Summoned_C",
+            MaxPercentageOfDesiredNumToAllow=0.01
         )
     )
 )
