fix syntax of .ini files

--- a/Game.ini
+++ b/Game.ini
@@ -29,53 +29,53 @@
 
 ; Add Phoenix to Redwoods
 ConfigAddNPCSpawnEntriesContainer=(
-    NPCSpawnEntriesContainerClassString="RedwoodsSpawner",
+    NPCSpawnEntriesContainerClassString="RedwoodsSpawner"
     NPCSpawnEntries=(
         (
-            AnEntryName="PhoenixSpawner",
-            EntryWeight=0.1,
+            AnEntryName="PhoenixSpawner"
+            EntryWeight=0.1
             NPCsToSpawnStrings=("Phoenix_Character_BP_C")
         )
-    ),
+    )
     NPCSpawnLimits=(
         (
-            NPCClassString="Phoenix_Character_BP_C",
+            NPCClassString="Phoenix_Character_BP_C"
             MaxPercentageOfDesiredNumToAllow=0.1
         )
     )
-),
+)
 
 ; Add Managarmr to Snow
 ConfigAddNPCSpawnEntriesContainer=(
-    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnow_PGM_C",
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnow_PGM_C"
     NPCSpawnEntries=(
         (
-            AnEntryName="ManagarmrSpawns",
-            EntryWeight=0.1,
+            AnEntryName="ManagarmrSpawns"
+            EntryWeight=0.1
             NPCsToSpawnStrings=("IceJumper_Character_BP_C")
         )
-    ),
+    )
     NPCSpawnLimits=(
         (
-            NPCClassString="IceJumper_Character_BP_C",
+            NPCClassString="IceJumper_Character_BP_C"
             MaxPercentageOfDesiredNumToAllow=0.01
         )
     )
-),
+)
 
 ; Add Astrocetus to Snow
 ConfigAddNPCSpawnEntriesContainer=(
-    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnow_PGM_C",
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnow_PGM_C"
     NPCSpawnEntries=(
         (
-            AnEntryName="AstrocetusSpawn",
-            EntryWeight=0.1,
+            AnEntryName="AstrocetusSpawn"
+            EntryWeight=0.1
             NPCsToSpawnStrings=("SpaceWhale_Character_BP_C")
         )
-    ),
+    )
     NPCSpawnLimits=(
         (
-            NPCClassString="SpaceWhale_Character_BP_C",
+            NPCClassString="SpaceWhale_Character_BP_C"
             MaxPercentageOfDesiredNumToAllow=0.01
         )
     )
