adjust prime meat stacks

--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -153,6 +153,7 @@ HarvestAmountMultiplier=10.0
 PlayerCharacterFoodDrainMultiplier=0.2
 PlayerCharacterWaterDrainMultiplier=0.2
 OverrideMaxExperiencePointsPlayer=1872000
+TamingSpeedMultiplier=10.0
 
 [MessageOfTheDay]
 Message=Sup Bitches!
