--- a/Game.ini
+++ b/Game.ini
@@ -2,9 +2,9 @@
 ; MAP: FJORDUR
 
 [/script/shootergame.shootergamemode]
-GlobalSpoilingTimeMultiplier=1  ;This multiplies the spoiling time of all perishables. 0 means they never spoil.
-GlobalItemDecompositionTimeMultiplier=1  ;This multiplies the time it takes for dropped items to decompose. 0 means they never decompose.
-GlobalCorpseDecompositionTimeMultiplier=1  ;This multiplies the time it takes for corpses to decompose. 0 means they never decompose.
+GlobalSpoilingTimeMultiplier=0.1  ;This multiplies the spoiling time of all perishables. 0 means they never spoil.
+GlobalItemDecompositionTimeMultiplier=0.5  ;This multiplies the time it takes for dropped items to decompose. 0 means they never decompose.
+GlobalCorpseDecompositionTimeMultiplier=0.5  ;This multiplies the time it takes for corpses to decompose. 0 means they never decompose.
 PvPZoneStructureDamageMultiplier=6.0  ;This multiplies the damage dealt to structures within PvP zones.
 bPvEDisableFriendlyFire=false  ;If set to true, disables friendly fire in PvE.
 ResourceNoReplenishRadiusPlayers=1  ;Determines the radius around players where resources will not respawn.
@@ -129,12 +129,24 @@ PerLevelStatsMultiplier_DinoTamed[11]=100.0
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawPrimeMeat_C", Quantity=(MaxItemQuantity=1000, bIgnoreMultiplier=true))
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawPrimeFishMeat_C", Quantity=(MaxItemQuantity=1000, bIgnoreMultiplier=true))
 
-; replace look?
-NPCReplacements=(FromClassName="AlphaRaptor_Character_BP_C",ToClassName="Raptor_Character_BP_C")
-NPCReplacements=(FromClassName="AlphaCarno_Character_BP_C",ToClassName="Carno_Character_BP_C")
-NPCReplacements=(FromClassName="AlphaRex_Character_BP_C",ToClassName="Rex_Character_BP_C")
-NPCReplacements=(FromClassName="AlphaMosasaur_Character_BP_C",ToClassName="Mosasaur_Character_BP_C")
-NPCReplacements=(FromClassName="AlphaTusoteuthis_Character_BP_C",ToClassName="Tusoteuthis_Character_BP_C")
-NPCReplacements=(FromClassName="AlphaDeathworm_Character_BP_C",ToClassName="Deathworm_Character_BP_C")
+; loot crates
+; white
+ConfigOverrideSupplyCrateItems=(SupplyCrateClassString="SupplyCrate_Level03_C",MinItemSets=1,MaxItemSets=1,NumItemSetsPower=1.0,bSetsRandomWithoutReplacement=true,ItemSets=((MinNumItems=2,MaxNumItems=2,NumItemsPower=1.0,SetWeight=1.0,bItemsRandomWithoutReplacement=true,ItemEntries=((EntryWeight=1.0,ItemClassStrings=("PrimalItemStructure_Toilet_C"),ItemsWeights=(1.0),MinQuantity=10.0,MaxQuantity=10.0,MinQuality=1.0,MaxQuality=1.0,bForceBlueprint=false,ChanceToBeBlueprintOverride=0.5)))))
 
-DinoColorizationOverrides=(DinoNameTag="<wild>",Colors=((ColorizationSetIndices=(0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19),ColorizationValues=(0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0))))
+;green
+ConfigOverrideSupplyCrateItems=(SupplyCrateClassString="SupplyCrate_Level15_C",MinItemSets=1,MaxItemSets=1,NumItemSetsPower=1.0,bSetsRandomWithoutReplacement=true,ItemSets=((MinNumItems=2,MaxNumItems=2,NumItemsPower=1.0,SetWeight=1.0,bItemsRandomWithoutReplacement=true,ItemEntries=((EntryWeight=1.0,ItemClassStrings=("PrimalItemResource_ElementDust_C"),ItemsWeights=(1.0),MinQuantity=10.0,MaxQuantity=10.0,MinQuality=1.0,MaxQuality=1.0,bForceBlueprint=false,ChanceToBeBlueprintOverride=0.5)))))
+
+;blue
+ConfigOverrideSupplyCrateItems=(SupplyCrateClassString="SupplyCrate_Level25_C",MinItemSets=1,MaxItemSets=1,NumItemSetsPower=1.0,bSetsRandomWithoutReplacement=true,ItemSets=((MinNumItems=2,MaxNumItems=2,NumItemsPower=1.0,SetWeight=1.0,bItemsRandomWithoutReplacement=true,ItemEntries=((EntryWeight=1.0,ItemClassStrings=("PrimalItemResource_ElementOre_C"),ItemsWeights=(1.0),MinQuantity=10.0,MaxQuantity=10.0,MinQuality=1.0,MaxQuality=1.0,bForceBlueprint=false,ChanceToBeBlueprintOverride=0.5)))))
+
+;purple
+ConfigOverrideSupplyCrateItems=(SupplyCrateClassString="SupplyCrate_Level35_C",MinItemSets=1,MaxItemSets=1,NumItemSetsPower=1.0,bSetsRandomWithoutReplacement=true,ItemSets=((MinNumItems=2,MaxNumItems=2,NumItemsPower=1.0,SetWeight=1.0,bItemsRandomWithoutReplacement=true,ItemEntries=((EntryWeight=1.0,ItemClassStrings=("PrimalItemResource_ElementShard_C"),ItemsWeights=(1.0),MinQuantity=10.0,MaxQuantity=10.0,MinQuality=1.0,MaxQuality=1.0,bForceBlueprint=false,ChanceToBeBlueprintOverride=0.5)))))
+
+;yellow
+ConfigOverrideSupplyCrateItems=(SupplyCrateClassString="SupplyCrate_Level45_C",MinItemSets=1,MaxItemSets=1,NumItemSetsPower=1.0,bSetsRandomWithoutReplacement=true,ItemSets=((MinNumItems=2,MaxNumItems=2,NumItemsPower=1.0,SetWeight=1.0,bItemsRandomWithoutReplacement=true,ItemEntries=((EntryWeight=1.0,ItemClassStrings=("PrimalItemResource_Element_C"),ItemsWeights=(1.0),MinQuantity=10.0,MaxQuantity=10.0,MinQuality=1.0,MaxQuality=1.0,bForceBlueprint=false,ChanceToBeBlueprintOverride=0.5)))))
+
+;red
+ConfigOverrideSupplyCrateItems=(SupplyCrateClassString="SupplyCrate_Level60_C",MinItemSets=1,MaxItemSets=1,NumItemSetsPower=1.0,bSetsRandomWithoutReplacement=true,ItemSets=((MinNumItems=2,MaxNumItems=2,NumItemsPower=1.0,SetWeight=1.0,bItemsRandomWithoutReplacement=true,ItemEntries=((EntryWeight=1.0,ItemClassStrings=("PrimalItemStructure_TekReplicator_C"),ItemsWeights=(1.0),MinQuantity=10.0,MaxQuantity=10.0,MinQuality=1.0,MaxQuality=1.0,bForceBlueprint=false,ChanceToBeBlueprintOverride=0.5)))))
+
+; replace dinos with their alpha version
+NPCReplacements=((FromClassName="AlphaRaptor_Character_BP_C",ToClassName="Raptor_Character_BP_C"),(FromClassName="AlphaCarno_Character_BP_C",ToClassName="Carno_Character_BP_C"),(FromClassName="AlphaRex_Character_BP_C",ToClassName="Rex_Character_BP_C"),(FromClassName="AlphaMosasaur_Character_BP_C",ToClassName="Mosasaur_Character_BP_C"),(FromClassName="AlphaTusoteuthis_Character_BP_C",ToClassName="Tusoteuthis_Character_BP_C"),(FromClassName="AlphaDeathworm_Character_BP_C",ToClassName="Deathworm_Character_BP_C"))
