force fliers, add crosshairs, and add player location to map.

--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -63,7 +63,7 @@ ClampResourceHarvestDamage=false
 MaxPersonalTamedDinos=500
 BanListURL=
 AutoSavePeriodMinutes=30.000000
-ShowMapPlayerLocation=False
+ShowMapPlayerLocation=True
 ServerHardcore=False
 GlobalVoiceChat=False
 ProximityChat=False
@@ -71,7 +71,7 @@ AllowThirdPersonPlayer=True
 AlwaysNotifyPlayerLeft=False
 DontAlwaysNotifyPlayerJoined=True
 ServerPVE=True
-ServerCrosshair=False
+ServerCrosshair=True
 ServerForceNoHUD=False
 NoTributeDownloads=False
 DifficultyOffset=5.0
@@ -95,7 +95,7 @@ AllowHideDamageSourceFromLogs=True
 RandomSupplyCratePoints=False
 DisableWeatherFog=False
 AdminLogging=False
-bForceCanRideFliers=False
+bForceCanRideFliers=True
 EnableCryoSicknessPVE=False
 CryopodNerfDuration=1
 CryopodNerfDamageMult=1
