add bigger nodes to resources, always pickup placed structures, and spiked walls hurt riderless dinos.

--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -150,10 +150,12 @@ EnableCryopodNerf=False
 DayTimeSpeedScale=0.5
 NightTimeSpeedScale=10.0
 HarvestAmountMultiplier=10.0
+HarvestHealthMultiplier=3.0
 PlayerCharacterFoodDrainMultiplier=0.2
 PlayerCharacterWaterDrainMultiplier=0.2
 OverrideMaxExperiencePointsPlayer=1872000
 TamingSpeedMultiplier=10.0
+AlwaysAllowStructurePickup=True
 
 [MessageOfTheDay]
 Message=Sup Bitches!
