adjust level stats, spoil timer, torpor drain, adjust loot crates, and health regen rates

--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -156,6 +156,8 @@ PlayerCharacterWaterDrainMultiplier=0.2
 OverrideMaxExperiencePointsPlayer=1872000
 TamingSpeedMultiplier=10.0
 AlwaysAllowStructurePickup=True
+PlayerCharacterHealthRecoveryMultiplier=5.0
+DinoCharacterHealthRecoveryMultiplier=10.0
 
 [MessageOfTheDay]
 Message=Sup Bitches!
