difficulty increase, dino speed increase, torpor loss rate decresed.

--- a/Game.ini
+++ b/Game.ini
@@ -64,7 +64,7 @@ bShowCreativeMode=false  ;If set to true, shows the creative mode option in the 
 PreventOfflinePvPConnectionInvincibleInterval=5  ;Sets the time a player stays invincible after logging in during a PvE-PvP switch, in seconds.
 TamedDinoCharacterFoodDrainMultiplier=1  ;This multiplies the rate at which tamed dinos consume food.
 WildDinoCharacterFoodDrainMultiplier=1  ;This multiplies the rate at which wild dinos consume food.
-WildDinoTorporDrainMultiplier=5  ;This multiplies the rate at which wild dinos lose torpor.
+WildDinoTorporDrainMultiplier=0.1  ;This multiplies the rate at which wild dinos lose torpor.
 PassiveTameIntervalMultiplier=20 ; PassiveTameIntervalMultiplier: This determines the time between feeding intervals when passively taming dinosaurs. A higher value means less time between feedings, so taming is faster.
 TamedDinoTorporDrainMultiplier=20 ; TamedDinoTorporDrainMultiplier: This determines how quickly a tamed dinosaur's torpor decreases. A higher value means torpor decreases faster, so dinosaurs wake up quicker from being unconscious.
 bIgnoreStructuresPreventionVolumes=true ; bIgnoreStructuresPreventionVolumes: When set to True, this allows building in normally restricted areas, like around important landmarks or caves.
@@ -112,7 +112,7 @@ PerLevelStatsMultiplier_Player[9]=10.0
 PerLevelStatsMultiplier_Player[10]=100.0
 PerLevelStatsMultiplier_Player[11]=20.0
 
-PerLevelStatsMultiplier_DinoTamed[0]=10.0
+PerLevelStatsMultiplier_DinoTamed[0]=5.0
 PerLevelStatsMultiplier_DinoTamed[1]=100.0
 PerLevelStatsMultiplier_DinoTamed[2]=100.0
 PerLevelStatsMultiplier_DinoTamed[3]=100.0
@@ -120,8 +120,8 @@ PerLevelStatsMultiplier_DinoTamed[4]=100.0
 PerLevelStatsMultiplier_DinoTamed[5]=100.0
 PerLevelStatsMultiplier_DinoTamed[6]=10000.0
 PerLevelStatsMultiplier_DinoTamed[7]=10000.0
-PerLevelStatsMultiplier_DinoTamed[8]=10.0
-PerLevelStatsMultiplier_DinoTamed[9]=10.0
+PerLevelStatsMultiplier_DinoTamed[8]=5.0
+PerLevelStatsMultiplier_DinoTamed[9]=20.0
 PerLevelStatsMultiplier_DinoTamed[10]=100.0
 PerLevelStatsMultiplier_DinoTamed[11]=100.0
 
