knock out wild dinos faster

--- a/Game.ini
+++ b/Game.ini
@@ -125,6 +125,8 @@ PerLevelStatsMultiplier_DinoTamed[9]=20.0
 PerLevelStatsMultiplier_DinoTamed[10]=100.0
 PerLevelStatsMultiplier_DinoTamed[11]=100.0
 
+PerLevelStatsMultiplier_DinoWild[2]=0.1
+
 ; raw prime meat
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawPrimeMeat_C", Quantity=(MaxItemQuantity=1000, bIgnoreMultiplier=true))
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawPrimeFishMeat_C", Quantity=(MaxItemQuantity=1000, bIgnoreMultiplier=true))
