allow flying in caves

--- a/Game.ini
+++ b/Game.ini
@@ -76,6 +76,7 @@ bAllowFlyerSpeedLeveling=false ; bAllowFlyerSpeedLeveling: When set to False, th
 TamingSpeedMultiplier=25.0
 ResourceRespawnPeriodMultiplier=0.2
 bAutoUnlockAllEngrams=true
+ForceAllowCaveFlyers=true
 
 ; Add Phoenix to Redwoods
 ConfigAddNPCSpawnEntriesContainer=(NPCSpawnEntriesContainerClassString="RedwoodsSpawner",NPCSpawnEntries=((AnEntryName="PhoenixSpawner",EntryWeight=0.1,NPCsToSpawnStrings=("Phoenix_Character_BP_C"))), NPCSpawnLimits=((NPCClassString="Phoenix_Character_BP_C",MaxPercentageOfDesiredNumToAllow=0.1)))
