override default difficulty

--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -74,7 +74,8 @@ ServerPVE=True
 ServerCrosshair=True
 ServerForceNoHUD=False
 NoTributeDownloads=False
-DifficultyOffset=50.0
+DifficultyOffset=1.0
+OverrideOfficialDifficulty=50.0
 DisableStructureDecayPvE=True
 AllowFlyerCarryPvE=True
 TheMaxStructuresInRange=1300
