volcano, player defence buff, random crate drop points, and lower wild dino torpor.

--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -93,7 +93,7 @@ AllowCaveBuildingPvP=True
 OnlyDecayUnsnappedCoreStructures=False
 TribeNameChangeCooldown=15
 AllowHideDamageSourceFromLogs=True
-RandomSupplyCratePoints=False
+RandomSupplyCratePoints=True
 DisableWeatherFog=False
 AdminLogging=False
 bForceCanRideFliers=True
@@ -159,6 +159,11 @@ TamingSpeedMultiplier=10.0
 AlwaysAllowStructurePickup=True
 PlayerCharacterHealthRecoveryMultiplier=5.0
 DinoCharacterHealthRecoveryMultiplier=10.0
+PlayerResistanceMultiplier=0.2 ; players take less damage
+StructureResistanceMultiplier=0 ; structures won't take damage
+DinoCountMultiplier=1.5 ; increase/decrease how many dinos spawn
+VolcanoIntensity=0.25 ; 0.25 is the most intense
+VolcanoInterval=0.1 ; 0.1 is the quickest 5000 - 15,000 seconds at 1.0
 
 [MessageOfTheDay]
 Message=Sup Bitches!
