reduce fall damage from higher up & add admin logging

--- a/Game.ini
+++ b/Game.ini
@@ -77,6 +77,7 @@ TamingSpeedMultiplier=25.0
 ResourceRespawnPeriodMultiplier=0.2
 bAutoUnlockAllEngrams=true
 ForceAllowCaveFlyers=true
+MaxFallSpeedMultiplier=20.0 ; you take less damage from falling from really high up.
 
 ; Add Phoenix to Redwoods
 ConfigAddNPCSpawnEntriesContainer=(NPCSpawnEntriesContainerClassString="RedwoodsSpawner",NPCSpawnEntries=((AnEntryName="PhoenixSpawner",EntryWeight=0.1,NPCsToSpawnStrings=("Phoenix_Character_BP_C"))), NPCSpawnLimits=((NPCClassString="Phoenix_Character_BP_C",MaxPercentageOfDesiredNumToAllow=0.1)))
