--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -95,7 +95,7 @@ TribeNameChangeCooldown=15
 AllowHideDamageSourceFromLogs=True
 RandomSupplyCratePoints=True
 DisableWeatherFog=False
-AdminLogging=False
+AdminLogging=True
 bForceCanRideFliers=True
 EnableCryoSicknessPVE=False
 CryopodNerfDuration=1
