--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -23,7 +23,7 @@ bJoinNotifications=True ; If true, shows notifications when players join.
 bCraftablesShowAllItems=True ; If true, shows all items in the crafting menu.
 LookLeftRightSensitivity=1.000000 ; Controls the sensitivity of looking left and right.
 LookUpDownSensitivity=1.000000 ; Controls the sensitivity of looking up and down.
-GraphicsQuality=4 ; Sets the graphics quality level.
+GraphicsQuality=3 ; Sets the graphics quality level. (0=low 1=medium 2=high 3=epic 4=custom)
 ActiveLingeringWorldTiles=10 ; Controls the number of active lingering world tiles.
 bUseVSync=False ; If true, enables vertical sync.
 ResolutionSizeX=1920 ; Sets the X resolution size.
