--- a/Game.ini
+++ b/Game.ini
@@ -63,9 +63,9 @@ bHardLimitTurretsInRange=false  ;If set to true, strictly enforces the turret li
 bShowCreativeMode=false  ;If set to true, shows the creative mode option in the UI.
 PreventOfflinePvPConnectionInvincibleInterval=5  ;Sets the time a player stays invincible after logging in during a PvE-PvP switch, in seconds.
 TamedDinoCharacterFoodDrainMultiplier=1  ;This multiplies the rate at which tamed dinos consume food.
-WildDinoCharacterFoodDrainMultiplier=1  ;This multiplies the rate at which wild dinos consume food.
+WildDinoCharacterFoodDrainMultiplier=5.0  ;This multiplies the rate at which wild dinos consume food.
 WildDinoTorporDrainMultiplier=0.01  ;This multiplies the rate at which wild dinos lose torpor.
-PassiveTameIntervalMultiplier=20 ; PassiveTameIntervalMultiplier: This determines the time between feeding intervals when passively taming dinosaurs. A higher value means less time between feedings, so taming is faster.
+PassiveTameIntervalMultiplier=100 ; PassiveTameIntervalMultiplier: This determines the time between feeding intervals when passively taming dinosaurs. A higher value means less time between feedings, so taming is faster.
 TamedDinoTorporDrainMultiplier=20 ; TamedDinoTorporDrainMultiplier: This determines how quickly a tamed dinosaur's torpor decreases. A higher value means torpor decreases faster, so dinosaurs wake up quicker from being unconscious.
 bIgnoreStructuresPreventionVolumes=true ; bIgnoreStructuresPreventionVolumes: When set to True, this allows building in normally restricted areas, like around important landmarks or caves.
 bGenesisUseStructuresPreventionVolumes=false ; bGenesisUseStructuresPreventionVolumes: This is specific to the Genesis map. When set to False, it disables building restrictions in normally restricted areas.
@@ -73,7 +73,7 @@ bDisableGenesisMissions=false ; bDisableGenesisMissions: This is specific to the
 BabyImprintAmountMultiplier=100.0 ; BabyImprintAmountMultiplier: This determines how much imprint quality a baby dinosaur gets from each care interaction. A higher value means more imprint quality per interaction, so fewer interactions are needed to reach 100% imprinting.
 HexagonRewardMultiplier=99999 ; HexagonRewardMultiplier: This determines how many hexagons are earned from Genesis missions. A higher value means more hexagons per mission.
 bAllowFlyerSpeedLeveling=false ; bAllowFlyerSpeedLeveling: When set to False, this disables the ability to increase the speed stat of flying dinosaurs through leveling.
-TamingSpeedMultiplier=25.0
+TamingSpeedMultiplier=100.0
 ResourceRespawnPeriodMultiplier=0.2
 bAutoUnlockAllEngrams=true
 ForceAllowCaveFlyers=true
