update comments for readability.

--- a/Game_pretty.ini
+++ b/Game_pretty.ini
@@ -1,80 +1,167 @@
 [/script/shootergame.shootergamemode]
-GlobalSpoilingTimeMultiplier=2.0;This multiplies the spoiling time of all perishables. 0 means they never spoil.
-GlobalItemDecompositionTimeMultiplier=0.5;This multiplies the time it takes for dropped items to decompose. 0 means they never decompose.
-GlobalCorpseDecompositionTimeMultiplier=0.5;This multiplies the time it takes for corpses to decompose. 0 means they never decompose.
-PvPZoneStructureDamageMultiplier=6.0;This multiplies the damage dealt to structures within PvP zones.
-bPvEDisableFriendlyFire=false;If set to true, disables friendly fire in PvE.
-ResourceNoReplenishRadiusPlayers=1;Determines the radius around players where resources will not respawn.
-ResourceNoReplenishRadiusStructures=1;Determines the radius around structures where resources will not respawn.
-bAutoPvETimer=false;If set to true, enables the automatic switching between PvP and PvE at set times.
-bAutoPvEUseSystemTime=true;If set to true, uses the system time for the automatic PvE/PvP switch.
-AutoPvEStartTimeSeconds=0;Sets the start time for PvE in seconds since midnight.
-AutoPvEStopTimeSeconds=0;Sets the stop time for PvE in seconds since midnight.
-LayEggIntervalMultiplier=0.1;This multiplies the time interval between egg layings.
-DinoTurretDamageMultiplier=1.0;This multiplies the damage dinos deal to turrets.
-bDisableLootCrates=false;If set to true, disables loot crates.
-DinoHarvestingDamageMultiplier=3.0;This multiplies the damage dinos deal when harvesting.
-bDisableFriendlyFire=false;If set to true, disables friendly fire.
-CustomRecipeEffectivenessMultiplier=1.0;This multiplies the effectiveness of custom recipes.
-CustomRecipeSkillMultiplier=1.0;This multiplies the skill factor in creating custom recipes.
-MatingIntervalMultiplier=0.1;This multiplies the time interval between matings.
-EggHatchSpeedMultiplier=20.0;This multiplies the speed at which eggs hatch.
-BabyMatureSpeedMultiplier=100.0;This multiplies the speed at which babies mature.
-bPassiveDefensesDamageRiderlessDinos=true;If set to true, passive defenses will damage riderless dinos.
-KillXPMultiplier=5.0;This multiplies the XP gained from kills.
-HarvestXPMultiplier=5.0;This multiplies the XP gained from harvesting.
-CraftXPMultiplier=5.0;This multiplies the XP gained from crafting.
-GenericXPMultiplier=5.0;This multiplies the XP gained from all sources.
-SpecialXPMultiplier=5.0;This multiplies the XP gained from special events.
-PGMapName=PGMap;Sets the name of the procedurally generated map.
-PGTerrainPropertiesString=;Sets the parameters for the procedurally generated map.
-bDisableDinoRiding=false;If set to true, disables the ability to ride dinos.
-bDisableDinoTaming=false;If set to true, disables the ability to tame dinos.
-bUseCorpseLocator=true;If set to true, enables a green beam on the player's corpse```ini
-bDisableStructurePlacementCollision=true;If set to true, allows structures to clip into terrain and other structures.
-FastDecayInterval=43200;Sets the interval at which structures decay, in seconds.
-bUseSingleplayerSettings=false;If set to true, applies a set of predefined settings intended for singleplayer games.
-bAllowUnlimitedRespecs=true;If set to true, allows players to respec their characters an unlimited number of times.
-SupplyCrateLootQualityMultiplier=1.0;This multiplies the quality of loot in supply crates.
-FishingLootQualityMultiplier=1.0;This multiplies the quality of loot obtained through fishing.
-BabyCuddleIntervalMultiplier=0.01;This multiplies the time between necessary baby cuddles for imprinting.
-BabyCuddleGracePeriodMultiplier=0.5;This multiplies the grace period after a cuddle has been missed.
-BabyCuddleLoseImprintQualitySpeedMultiplier=0;This multiplies the speed at which babies lose imprinting quality if not cuddled.
-BabyImprintingStatScaleMultiplier=10.0;This multiplies the stats received from imprinting.
-PlayerHarvestingDamageMultiplier=1.0;This multiplies the damage players deal when harvesting.
-CropGrowthSpeedMultiplier=10.0;This multiplies the speed at which crops grow.
-BabyFoodConsumptionSpeedMultiplier=1.0;This multiplies the speed at which babies consume food.
-bPvEAllowTribeWar=true;If set to true, allows tribes to declare war on each other in PvE.
-bPvEAllowTribeWarCancel=true;If set to true, allows tribes to cancel war declarations in PvE.
-CropDecaySpeedMultiplier=0;This multiplies the speed at which crops decay.
-HairGrowthSpeedMultiplier=1.0;This multiplies the speed at which player hair grows.
-FuelConsumptionIntervalMultiplier=1.313000;This multiplies the time between fuel consumption ticks.
-KickIdlePlayersPeriod=3600;Sets the period of time before idle players are kicked, in seconds.
-MaxNumberOfPlayersInTribe=16;Sets the maximum number of players that a tribe can have.
-UseCorpseLifeSpanMultiplier=1;This multiplies the lifespan of player corpses.
-GlobalPoweredBatteryDurabilityDecreasePerSecond=0;Sets the rate at which powered batteries decrease in durability.
-bLimitTurretsInRange=true;If set to true, limits the number of turrets that can be placed within a range.
-LimitTurretsRange=10000;Sets the range within which turrets are limited.
-LimitTurretsNum=100;Sets the maximum number of turrets that can be placed within the turret limit range.
-bHardLimitTurretsInRange=false;If set to true, strictly enforces the turret limit within the turret limit range.
-bShowCreativeMode=false;If set to true, shows the creative mode option in the UI.
-PreventOfflinePvPConnectionInvincibleInterval=5;Sets the time a player stays invincible after logging in during a PvE-PvP switch, in seconds.
-TamedDinoCharacterFoodDrainMultiplier=1;This multiplies the rate at which tamed dinos consume food.
-WildDinoCharacterFoodDrainMultiplier=1.0;This multiplies the rate at which wild dinos consume food.
-WildDinoTorporDrainMultiplier=0.01;This multiplies the rate at which wild dinos lose torpor.
-PassiveTameIntervalMultiplier=0.1; PassiveTameIntervalMultiplier: This determines the time between feeding intervals when passively taming dinosaurs. A higher value means less time between feedings, so taming is faster.
-TamedDinoTorporDrainMultiplier=20; TamedDinoTorporDrainMultiplier: This determines how quickly a tamed dinosaur's torpor decreases. A higher value means torpor decreases faster, so dinosaurs wake up quicker from being unconscious.
-bIgnoreStructuresPreventionVolumes=true; bIgnoreStructuresPreventionVolumes: When set to True, this allows building in normally restricted areas, like around important landmarks or caves.
-bGenesisUseStructuresPreventionVolumes=false; bGenesisUseStructuresPreventionVolumes: This is specific to the Genesis map. When set to False, it disables building restrictions in normally restricted areas.
-bDisableGenesisMissions=false; bDisableGenesisMissions: This is specific to the Genesis map. When set to False, it allows missions to be activated.
-BabyImprintAmountMultiplier=100.0; BabyImprintAmountMultiplier: This determines how much imprint quality a baby dinosaur gets from each care interaction. A higher value means more imprint quality per interaction, so fewer interactions are needed to reach 100% imprinting.
-HexagonRewardMultiplier=99999; HexagonRewardMultiplier: This determines how many hexagons are earned from Genesis missions. A higher value means more hexagons per mission.
-bAllowFlyerSpeedLeveling=false; bAllowFlyerSpeedLeveling: When set to False, this disables the ability to increase the speed stat of flying dinosaurs through leveling.
+; This multiplies the spoiling time of all perishables.
+; 0 means they never spoil.
+GlobalSpoilingTimeMultiplier=2.0
+; This multiplies the time it takes for dropped items to decompose.
+; 0 means they never decompose.
+GlobalItemDecompositionTimeMultiplier=0.5
+; This multiplies the time it takes for corpses to decompose.
+; 0 means they never decompose.
+GlobalCorpseDecompositionTimeMultiplier=0.5
+; This multiplies the damage dealt to structures within PvP zones.
+PvPZoneStructureDamageMultiplier=6.0
+; If set to true, disables friendly fire in PvE.
+bPvEDisableFriendlyFire=false
+; Determines the radius around players where resources will not respawn.
+ResourceNoReplenishRadiusPlayers=1
+; Determines the radius around structures where resources will not respawn.
+ResourceNoReplenishRadiusStructures=1
+; If set to true, enables the automatic switching between PvP and PvE at set times.
+bAutoPvETimer=false
+; If set to true, uses the system time for the automatic PvE/PvP switch.
+bAutoPvEUseSystemTime=true
+; Sets the start time for PvE in seconds since midnight.
+AutoPvEStartTimeSeconds=0
+; Sets the stop time for PvE in seconds since midnight.
+AutoPvEStopTimeSeconds=0
+; This multiplies the time interval between egg layings.
+LayEggIntervalMultiplier=0.1
+; This multiplies the damage dinos deal to turrets.
+DinoTurretDamageMultiplier=1.0
+; If set to true, disables loot crates.
+bDisableLootCrates=false
+; This multiplies the damage dinos deal when harvesting.
+DinoHarvestingDamageMultiplier=3.0
+; If set to true, disables friendly fire.
+bDisableFriendlyFire=false
+; This multiplies the effectiveness of custom recipes.
+CustomRecipeEffectivenessMultiplier=1.0
+; This multiplies the skill factor in creating custom recipes.
+CustomRecipeSkillMultiplier=1.0
+; This multiplies the time interval between matings.
+MatingIntervalMultiplier=0.1
+; This multiplies the speed at which eggs hatch.
+EggHatchSpeedMultiplier=20.0
+; This multiplies the speed at which babies mature.
+BabyMatureSpeedMultiplier=100.0
+; If set to true, passive defenses will damage riderless dinos.
+bPassiveDefensesDamageRiderlessDinos=true
+; This multiplies the XP gained from kills.
+KillXPMultiplier=5.0
+; This multiplies the XP gained from harvesting.
+HarvestXPMultiplier=5.0
+; This multiplies the XP gained from crafting.
+CraftXPMultiplier=5.0
+; This multiplies the XP gained from all sources.
+GenericXPMultiplier=5.0
+; This multiplies the XP gained from special events.
+SpecialXPMultiplier=5.0
+; Sets the name of the procedurally generated map.
+PGMapName=PGMap
+; Sets the parameters for the procedurally generated map.
+PGTerrainPropertiesString=
+; If set to true, disables the ability to ride dinos.
+bDisableDinoRiding=false
+; If set to true, disables the ability to tame dinos.
+bDisableDinoTaming=false
+; If set to true, enables a green beam on the player's corpse```ini
+bUseCorpseLocator=true
+; If set to true, allows structures to clip into terrain and other structures.
+bDisableStructurePlacementCollision=true
+; Sets the interval at which structures decay, in seconds.
+FastDecayInterval=43200
+; If set to true, applies a set of predefined settings intended for singleplayer games.
+bUseSingleplayerSettings=false
+; If set to true, allows players to respec their characters an unlimited number of times.
+bAllowUnlimitedRespecs=true
+; This multiplies the quality of loot in supply crates.
+SupplyCrateLootQualityMultiplier=1.0
+; This multiplies the quality of loot obtained through fishing.
+FishingLootQualityMultiplier=1.0
+; This multiplies the time between necessary baby cuddles for imprinting.
+BabyCuddleIntervalMultiplier=0.01
+; This multiplies the grace period after a cuddle has been missed.
+BabyCuddleGracePeriodMultiplier=0.5
+; This multiplies the speed at which babies lose imprinting quality if not cuddled.
+BabyCuddleLoseImprintQualitySpeedMultiplier=0
+; This multiplies the stats received from imprinting.
+BabyImprintingStatScaleMultiplier=10.0
+; This multiplies the damage players deal when harvesting.
+PlayerHarvestingDamageMultiplier=1.0
+; This multiplies the speed at which crops grow.
+CropGrowthSpeedMultiplier=10.0
+; This multiplies the speed at which babies consume food.
+BabyFoodConsumptionSpeedMultiplier=1.0
+; If set to true, allows tribes to declare war on each other in PvE.
+bPvEAllowTribeWar=true
+; If set to true, allows tribes to cancel war declarations in PvE.
+bPvEAllowTribeWarCancel=true
+; This multiplies the speed at which crops decay.
+CropDecaySpeedMultiplier=0
+; This multiplies the speed at which player hair grows.
+HairGrowthSpeedMultiplier=1.0
+; This multiplies the time between fuel consumption ticks.
+FuelConsumptionIntervalMultiplier=1.313000
+; Sets the period of time before idle players are kicked, in seconds.
+KickIdlePlayersPeriod=3600
+; Sets the maximum number of players that a tribe can have.
+MaxNumberOfPlayersInTribe=16
+; This multiplies the lifespan of player corpses.
+UseCorpseLifeSpanMultiplier=1
+; Sets the rate at which powered batteries decrease in durability.
+GlobalPoweredBatteryDurabilityDecreasePerSecond=0
+; If set to true, limits the number of turrets that can be placed within a range.
+bLimitTurretsInRange=true
+; Sets the range within which turrets are limited.
+LimitTurretsRange=10000
+; Sets the maximum number of turrets that can be placed within the turret limit range.
+LimitTurretsNum=100
+; If set to true, strictly enforces the turret limit within the turret limit range.
+bHardLimitTurretsInRange=false
+; If set to true, shows the creative mode option in the UI.
+bShowCreativeMode=false
+; Sets the time a player stays invincible after logging in during a PvE-PvP switch,
+; in seconds.
+PreventOfflinePvPConnectionInvincibleInterval=5
+; This multiplies the rate at which tamed dinos consume food.
+TamedDinoCharacterFoodDrainMultiplier=1
+; This multiplies the rate at which wild dinos consume food.
+WildDinoCharacterFoodDrainMultiplier=1.0
+; This multiplies the rate at which wild dinos lose torpor.
+WildDinoTorporDrainMultiplier=0.01
+; PassiveTameIntervalMultiplier: This determines the time between feeding intervals
+; when passively taming dinosaurs. A higher value means less time between feedings,
+; so taming is faster.
+PassiveTameIntervalMultiplier=0.1
+; TamedDinoTorporDrainMultiplier: This determines how quickly a tamed dinosaur's
+; torpor decreases. A higher value means torpor decreases faster, so dinosaurs wake
+; up quicker from being unconscious.
+TamedDinoTorporDrainMultiplier=20
+; bIgnoreStructuresPreventionVolumes: When set to True, this allows building in
+; normally restricted areas, like around important landmarks or caves.
+bIgnoreStructuresPreventionVolumes=true
+; bGenesisUseStructuresPreventionVolumes: This is specific to the Genesis map.
+; When set to False, it disables building restrictions in normally restricted areas.
+bGenesisUseStructuresPreventionVolumes=false
+; bDisableGenesisMissions: This is specific to the Genesis map. When set to False,
+; it allows missions to be activated.
+bDisableGenesisMissions=false
+; BabyImprintAmountMultiplier: This determines how much imprint quality a baby
+; dinosaur gets from each care interaction. A higher value means more imprint quality
+; per interaction, so fewer interactions are needed to reach 100% imprinting.
+BabyImprintAmountMultiplier=100.0
+; HexagonRewardMultiplier: This determines how many hexagons are earned from Genesis
+; missions. A higher value means more hexagons per mission.
+HexagonRewardMultiplier=99999
+; bAllowFlyerSpeedLeveling: When set to False, this disables the ability to increase
+; the speed stat of flying dinosaurs through leveling.
+bAllowFlyerSpeedLeveling=false
 TamingSpeedMultiplier=100.0
 ResourceRespawnPeriodMultiplier=0.2
 bAutoUnlockAllEngrams=true
 ForceAllowCaveFlyers=true
-MaxFallSpeedMultiplier=20.0; you take less damage from falling from really high up.
+; you take less damage from falling from really high up.
+MaxFallSpeedMultiplier=20.0
 
 ; Add Phoenix to Redwoods
 ConfigAddNPCSpawnEntriesContainer=(
