comment out PG, since we don't use it. update to correct naming of ResourcesRespawnPeriodMultiplier, so this starts working.

--- a/Game_pretty.ini
+++ b/Game_pretty.ini
@@ -57,9 +57,9 @@ GenericXPMultiplier=5.0
 ; This multiplies the XP gained from special events.
 SpecialXPMultiplier=5.0
 ; Sets the name of the procedurally generated map.
-PGMapName=PGMap
+# PGMapName=PGMap
 ; Sets the parameters for the procedurally generated map.
-PGTerrainPropertiesString=
+# PGTerrainPropertiesString=
 ; If set to true, disables the ability to ride dinos.
 bDisableDinoRiding=false
 ; If set to true, disables the ability to tame dinos.
@@ -156,11 +156,15 @@ HexagonRewardMultiplier=99999
 ; bAllowFlyerSpeedLeveling: When set to False, this disables the ability to increase
 ; the speed stat of flying dinosaurs through leveling.
 bAllowFlyerSpeedLeveling=false
+; values > 1.0 make taming faster.
 TamingSpeedMultiplier=100.0
-ResourceRespawnPeriodMultiplier=0.2
+; values < 1.0 cause resource nodes to respawn more frequently.
+ResourcesRespawnPeriodMultiplier=0.2
+; this allows engrams to be unlocked automatically as you level up.
 bAutoUnlockAllEngrams=true
+; force allow cave flying.
 ForceAllowCaveFlyers=true
-; you take less damage from falling from really high up.
+; you take less damage from falling from really high up if # > 1.0.
 MaxFallSpeedMultiplier=20.0
 
 ; Add Phoenix to Redwoods
