more updates && ignore the build files for reduced redundancy.

--- a/GameUserSettings_pretty.ini
+++ b/GameUserSettings_pretty.ini
@@ -1,14 +1,14 @@
 [/Script/ShooterGame.ShooterGameUserSettings]
-MasterAudioVolume=1.000000; Controls the volume of all sounds in the game.
-MusicAudioVolume=1.000000; Controls the volume of the music in the game.
-SFXAudioVolume=1.000000; Controls the volume of sound effects in the game.
-CameraShakeScale=1.000000; Controls the amount of camera shake.
+MasterAudioVolume=1.0
+MusicAudioVolume=1.0
+SFXAudioVolume=1.0
+CameraShakeScale=1.0
 bFirstPersonRiding=False; If true, forces first-person perspective when riding dinos.
 bThirdPersonPlayer=False; If true, enables third-person perspective for players.
 bShowStatusNotificationMessages=True; If true, shows status notification messages.
 TrueSkyQuality=0.270000; Controls the quality of the sky.
-FOVMultiplier=1.000000; Multiplies the field of view.
-GroundClutterDensity=1.000000; Controls the density of ground clutter.
+FOVMultiplier=1.0
+GroundClutterDensity=1.0
 bFilmGrain=False; If true, enables film grain effect.
 bMotionBlur=False; If true, enables motion blur effect.
 bUseDFAO=True; If true, enables Distance Field Ambient Occlusion.
@@ -20,8 +20,8 @@ bFloatingNames=True; If true, shows floating names above characters.
 bChatBubbles=True; If true, shows chat bubbles above characters when they speak.
 bJoinNotifications=True; If true, shows notifications when players join.
 bCraftablesShowAllItems=True; If true, shows all items in the crafting menu.
-LookLeftRightSensitivity=1.000000; Controls the sensitivity of looking left and right.
-LookUpDownSensitivity=1.000000; Controls the sensitivity of looking up and down.
+LookLeftRightSensitivity=1.0
+LookUpDownSensitivity=1.0
 GraphicsQuality=3; Sets the graphics quality level. (0=low 1=medium 2=high 3=epic 4=custom)
 ActiveLingeringWorldTiles=10; Controls the number of active lingering world tiles.
 bUseVSync=False; If true, enables vertical sync.
@@ -50,6 +50,7 @@ sg.IBLQuality=1
 sg.HeightFieldShadowQuality=3
 
 [SessionSettings]
+; server name to lookup under unofficial sessions:
 SessionName=PURPLE-S3X
 
 [/Script/Engine.GameSession]
@@ -61,7 +62,7 @@ ServerPassword=allday
 ClampResourceHarvestDamage=false
 MaxPersonalTamedDinos=500
 BanListURL=
-AutoSavePeriodMinutes=30.000000
+AutoSavePeriodMinutes=30.0
 ShowMapPlayerLocation=True
 ServerHardcore=False
 GlobalVoiceChat=False
@@ -114,17 +115,18 @@ AutoDestroyDecayedDinos=False
 PreventTribeAlliances=True
 RCONEnabled=True
 RCONPort=13128
-PreventOfflinePvPInterval=800.000000
+PreventOfflinePvPInterval=800.0
 OxygenSwimSpeedStatMultiplier=0.2
-StructurePreventResourceRadiusMultiplier=1.000000
-PlatformSaddleBuildAreaBoundsMultiplier=1.000000
+StructurePreventResourceRadiusMultiplier=1.0
+PlatformSaddleBuildAreaBoundsMultiplier=1.0
 StructurePickupTimeAfterPlacement=99999
 StructurePickupHoldDuration=0.500000
 AllowIntegratedSPlusStructures=True
-RaidDinoCharacterFoodDrainMultiplier=1.000000
-KickIdlePlayersPeriod=3600.000000
-MaxTamedDinos=4000.000000
-RCONServerGameLogBuffer=1000.000000
+RaidDinoCharacterFoodDrainMultiplier=1.0
+KickIdlePlayersPeriod=3600.0
+; 8000 dinos / 16 slots = 500 each.
+MaxTamedDinos=8000.0
+RCONServerGameLogBuffer=1000.0
 AllowRaidDinoFeeding=True
 EnableExtraStructurePreventionVolumes=True
 ShowFloatingDamageText=True
@@ -158,11 +160,16 @@ TamingSpeedMultiplier=10.0
 AlwaysAllowStructurePickup=True
 PlayerCharacterHealthRecoveryMultiplier=5.0
 DinoCharacterHealthRecoveryMultiplier=10.0
-PlayerResistanceMultiplier=0.2; players take less damage
-StructureResistanceMultiplier=0; structures won't take damage
-DinoCountMultiplier=1.5; increase/decrease how many dinos spawn
-VolcanoIntensity=0.25; 0.25 is the most intense
-VolcanoInterval=0.1; 0.1 is the quickest 5000 - 15,000 seconds at 1.0
+; players take less damage
+PlayerResistanceMultiplier=0.2
+; structures won't take damage
+StructureResistanceMultiplier=0
+; increase/decrease how many dinos spawn
+DinoCountMultiplier=1.5
+; 0.25 is the most intense
+VolcanoIntensity=0.25
+; 0.1 is the quickest. default = 5000 - 15,000 seconds at 1.0
+VolcanoInterval=0.1
 
 [MessageOfTheDay]
 Message=SupBitches!
